[package]
name = "casket"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1"
bytes = "1.10"
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.87"
futures-lite = { version = "2.6" }
async-stream = "0.3.6"
crc32fast = "1.4.2"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
tempfile = "3.18"
env_logger = "0.11.6"